[package]
name = "nlookup"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.5.0-alpha.0", default-features = false }
ark-ec = { version = "0.5.0-alpha.0", default-features = false }
ark-poly = { version = "0.5.0-alpha.0", default-features = false }
ark-serialize = { version = "0.5.0-alpha.0", default-features = false }
ark-relations = { version = "0.5.0-alpha.0", default-features = false }
ark-r1cs-std = { version = "0.5.0-alpha.0", default-features = false }
ark-pallas = { version = "0.5.0-alpha.0" }
ark-std = { version = "0.5.0-alpha.0", default-features = false }
ark-crypto-primitives = { git="https://github.com/arkworks-rs/crypto-primitives.git", features = ["sponge","r1cs"] }
itertools = "0.13.0"
rand = "0.8"

# I am playing a dangerous game - do not copy thoughtlessly
bellpepper-core = { version="0.4.0", default-features = false }
bellpepper = { version="0.4.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
nova-snark = { version = "0.37.0", default-features = false }

[profile.test]
opt-level = 3

